--- a/.github/workflows/timestamp.yml
+++ b/.github/workflows/timestamp.yml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Commit timestamp file
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global user.name 'kironroy'
+          git config --global user.email 'kironroydev@outlook.com'
           git add timestamp.txt
           git commit -m "Update timestamp"
-          git push
+          git push --set-upstream origin main
